--- a/2router.html
+++ b/2router.html
@@ -371,7 +371,7 @@
 
         </div>
 
-        <div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>
+        <div class="credit"> created by <span>Ignasius</span> | all rights reserved! </div>
 
     </section>
 
