mengubah footer dan menambahkan about

--- a/about.html
+++ b/about.html
@@ -93,10 +93,9 @@
       </div>
 
       <div class="content">
-         <h3 class="about-title">we have best courses for you</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam hic magnam fugit exercitationem neque,
-            quae laboriosam natus. Ut maxime assumenda facere ea quasi accusamus dolores delectus tempora animi,
-            expedita iste. lorem90</p>
+         <h3 class="about-title">Sejarah Website</h3>
+         <p>website ini pertama kali di buat pada tahun 2022. Tujuan awal membuat sebuah website adalah untuk bertukar
+            pikiran, jadi ilmu yang saya dapatkan akan saya terapkan pada website ini</p>
          <div class="icons-container">
             <div class="icons">
                <img src="images/about-icon-1.png" alt="">
@@ -394,7 +393,7 @@
 
       </div>
 
-      <div class="credit"> created by <span>Ignasius/span> | all rights reserved! </div>
+      <div class="credit"> created by <span>Ignasius</span> | all rights reserved! </div>
 
    </section>
 
