memindahkan file kedalam folder dan mengedit halaman html

--- a/public/1router.html
+++ b/public/1router.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1 Router</title>
 
-    <link rel="icon" href="./images/linux-hero.png">
+    <link rel="icon" href="../images/linux-hero.png">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -29,10 +29,10 @@
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="home.html">home</a>
-            <a href="about.html">about</a>
-            <a href="courses.html">courses</a>
-            <a href="contact.html">contact</a>
+            <a href="../home.html">home</a>
+            <a href="../public/about.html">about</a>
+            <a href="../public/blog.html">blog</a>
+            <a href="../public/contact.html">contact</a>
         </nav>
 
         <div class="icons">
@@ -81,7 +81,7 @@
 
     <section class="heading-link">
         <h3>1 ROUTER <br> 1 SWITCH <br> 2 PC</h3>
-        <p> <a href="cisco.html">Back</a> / cisco </p>
+        <p> <a href="../public/cisco.html">Back</a> / cisco </p>
     </section>
 
     <!-- contact section starts  -->
@@ -91,7 +91,7 @@
         <h1 class="heading"> Topologi </h1>
         <div class="container">
             <div class="hero" style="text-align: center;">
-                <img src="./images/topologi.png" alt="">
+                <img src="../images/topologi.png" alt="">
             </div>
             <div class="artikel" style="font-size: 18px;">
                 <p>Gambar diatas merupakan Topologi, jika kalian sudah membuat topologi seperti diatas maka ikuti
@@ -155,7 +155,7 @@
                 </p>
                 <div class="gambar">
                     <p style="text-align: center;">
-                        <img src="./images/ping.png" style="width: 200px;" alt="">
+                        <img src="../images/ping.png" style="width: 200px;" alt="">
                     </p>
                 </div>
             </div>
@@ -189,10 +189,10 @@
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html" class="link">home</a>
-                <a href="about.html" class="link">about</a>
-                <a href="courses.html" class="link">courses</a>
-                <a href="contact.html" class="link">contact</a>
+                <a href="../home.html" class="link">home</a>
+                <a href="../public/about.html" class="link">about</a>
+                <a href="../public/blog.html" class="link">Blog</a>
+                <a href="../public/contact.html" class="link">contact</a>
             </div>
 
             <div class="box">
@@ -229,7 +229,7 @@
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
     <!-- custom js file link  -->
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 </body>
 
