--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>about</title>
 
-   <link rel="icon" href="./images/linux-hero.png">
+   <link rel="icon" href="../images/linux-hero.png">
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -15,7 +15,7 @@
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -29,10 +29,10 @@
 
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times"></div>
-         <a href="home.html">home</a>
-         <a href="about.html">about</a>
-         <a href="courses.html">courses</a>
-         <a href="contact.html">contact</a>
+         <a href="../home.html">home</a>
+         <a href="../public/about.html">about</a>
+         <a href="../public/blog.html">blog</a>
+         <a href="../public/contact.html">contact</a>
       </nav>
 
       <div class="icons">
@@ -81,7 +81,7 @@
 
    <section class="heading-link">
       <h3>about us</h3>
-      <p> <a href="home.html">home</a> / about </p>
+      <p> <a href="../home.html">home</a> / about </p>
    </section>
 
    <!-- about section starts  -->
@@ -89,7 +89,7 @@
    <section class="about">
 
       <div class="image">
-         <img src="images/about-img.jpg" alt="">
+         <img src="../images/about-img.jpg" alt="">
       </div>
 
       <div class="content">
@@ -98,17 +98,17 @@
             pikiran, jadi ilmu yang saya dapatkan akan saya terapkan pada website ini</p>
          <div class="icons-container">
             <div class="icons">
-               <img src="images/about-icon-1.png" alt="">
+               <img src="../images/about-icon-1.png" alt="">
                <h3>350+</h3>
                <span>courses</span>
             </div>
             <div class="icons">
-               <img src="images/about-icon-2.png" alt="">
+               <img src="../images/about-icon-2.png" alt="">
                <h3>1200+</h3>
                <span>students</span>
             </div>
             <div class="icons">
-               <img src="images/about-icon-3.png" alt="">
+               <img src="../images/about-icon-3.png" alt="">
                <h3>10+</h3>
                <span>awards</span>
             </div>
@@ -131,7 +131,7 @@
 
             <div class="swiper-slide slide">
                <div class="image">
-                  <img src="images/teacher-1.png" alt="">
+                  <img src="../images/teacher-1.png" alt="">
                   <div class="share">
                      <a href="#" class="fab fa-facebook-f"></a>
                      <a href="#" class="fab fa-twitter"></a>
@@ -147,7 +147,7 @@
 
             <div class="swiper-slide slide">
                <div class="image">
-                  <img src="images/teacher-2.png" alt="">
+                  <img src="../images/teacher-2.png" alt="">
                   <div class="share">
                      <a href="#" class="fab fa-facebook-f"></a>
                      <a href="#" class="fab fa-twitter"></a>
@@ -163,7 +163,7 @@
 
             <div class="swiper-slide slide">
                <div class="image">
-                  <img src="images/teacher-3.png" alt="">
+                  <img src="../images/teacher-3.png" alt="">
                   <div class="share">
                      <a href="#" class="fab fa-facebook-f"></a>
                      <a href="#" class="fab fa-twitter"></a>
@@ -179,7 +179,7 @@
 
             <div class="swiper-slide slide">
                <div class="image">
-                  <img src="images/teacher-4.png" alt="">
+                  <img src="../images/teacher-4.png" alt="">
                   <div class="share">
                      <a href="#" class="fab fa-facebook-f"></a>
                      <a href="#" class="fab fa-twitter"></a>
@@ -195,7 +195,7 @@
 
             <div class="swiper-slide slide">
                <div class="image">
-                  <img src="images/teacher-5.png" alt="">
+                  <img src="../images/teacher-5.png" alt="">
                   <div class="share">
                      <a href="#" class="fab fa-facebook-f"></a>
                      <a href="#" class="fab fa-twitter"></a>
@@ -211,7 +211,7 @@
 
             <div class="swiper-slide slide">
                <div class="image">
-                  <img src="images/teacher-6.png" alt="">
+                  <img src="../images/teacher-6.png" alt="">
                   <div class="share">
                      <a href="#" class="fab fa-facebook-f"></a>
                      <a href="#" class="fab fa-twitter"></a>
@@ -247,7 +247,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="images/pic-1.png" alt="">
+               <img src="../images/pic-1.png" alt="">
                <h3>john deo</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
@@ -262,7 +262,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="images/pic-2.png" alt="">
+               <img src="../images/pic-2.png" alt="">
                <h3>john deo</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
@@ -277,7 +277,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="images/pic-3.png" alt="">
+               <img src="../images/pic-3.png" alt="">
                <h3>john deo</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
@@ -292,7 +292,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="images/pic-4.png" alt="">
+               <img src="../images/pic-4.png" alt="">
                <h3>john deo</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
@@ -307,7 +307,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="images/pic-5.png" alt="">
+               <img src="../images/pic-5.png" alt="">
                <h3>john deo</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
@@ -322,7 +322,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero nemo,
                   eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque, tempora sit.
                </p>
-               <img src="images/pic-6.png" alt="">
+               <img src="../images/pic-6.png" alt="">
                <h3>john deo</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
@@ -367,10 +367,10 @@
 
          <div class="box">
             <h3>quick links</h3>
-            <a href="home.html" class="link">home</a>
-            <a href="about.html" class="link">about</a>
-            <a href="courses.html" class="link">courses</a>
-            <a href="contact.html" class="link">contact</a>
+            <a href="../home.html" class="link">home</a>
+            <a href="../public/about.html" class="link">about</a>
+            <a href="../public/blog.html" class="link">blog</a>
+            <a href="../public/contact.html" class="link">contact</a>
          </div>
 
          <div class="box">
@@ -408,7 +408,7 @@
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="js/script.js"></script>
+   <script src="../js/script.js"></script>
 
 </body>
 
