--- a/public/cisco.html
+++ b/public/cisco.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3 Router</title>
+    <title>contact</title>
 
-    <link rel="icon" href="./images/linux-hero.png">
+    <link rel="icon" href="../images/linux-hero.png">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -29,10 +29,10 @@
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="home.html">home</a>
-            <a href="about.html">about</a>
-            <a href="courses.html">courses</a>
-            <a href="contact.html">contact</a>
+            <a href="../home.html">home</a>
+            <a href="./about.html">about</a>
+            <a href="../public/blog.html">blog</a>
+            <a href="../public/contact.html">contact</a>
         </nav>
 
         <div class="icons">
@@ -80,28 +80,72 @@
     <!-- header section ends -->
 
     <section class="heading-link">
-        <h3>3 ROUTER <br> 3 SWITCH <br> 6 PC</h3>
-        <p> <a href="cisco.html">Back</a> / cisco </p>
+        <h3>CISCO</h3>
+        <p> <a href="../home.html">home</a> / cisco </p>
     </section>
 
-    <!-- about section starts  -->
+    <!-- contact section starts  -->
 
-    <section class="about">
+    <section class="contact">
 
-        <div class="image">
-            <img src="images/about-img.jpg" alt="">
+        <h1 class="heading"> Pilih Tipe </h1>
+
+        <div class="icons-container">
+
+            <div class="icons">
+                <div class="gambar">
+                    <img src="../images/topologi.png" alt="" style="width: 200px;">
+                </div>
+                <h3>1 ROUTER </h3>
+                <h3>1 SWITCH</h3>
+                <h3>2pc</h3>
+                <a href="../public/1router.html"><button type="button"
+                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+            </div>
+
+            <div class="icons">
+                <div class="gambar">
+                    <img src="../images/topologi4.png" alt="" style="width: 200px; height: 180px;">
+                </div>
+                <h3>2 ROUTER</h3>
+                <h3>4 SWITCH</h3>
+                <h3>8 PC</h3>
+                <a href="../public/2router.html"><button type="button"
+                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+            </div>
+
+            <div class="icons">
+                <div class="gambar">
+                    <img src="../images/topologi5.png" alt="" style="width: 200px; height: 180px;">
+                </div>
+                <h3>3 ROUTER </h3>
+                <h3>6 SWITCH</h3>
+                <h3>12 PC</h3>
+                <a href="../public/3router.html"><button type="button"
+                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+            </div>
+            <div class="icons">
+                <div class="gambar">
+                    <img src="../images/topologi5.png" alt="" style="width: 200px; height: 180px;">
+                </div>
+                <h3>VLAN </h3>
+                <a href="../public/3router."><button type="button"
+                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+            </div>
+            <div class="icons">
+                <div class="gambar">
+                    <img src="../images/topologi5.png" alt="" style="width: 200px; height: 180px;">
+                </div>
+                <h3>3 ROUTER </h3>
+                <h3>6 SWITCH</h3>
+                <h3>12 PC</h3>
+                <a href="../public/3router.h"><button type="button"
+                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+            </div>
         </div>
-
-        <div class="content">
-            <h3 class="about-title">SEDANG DALAM PENGEMBANGAN <br>
-                <center>.....</center>
-            </h3>
-        </div>
-
     </section>
 
-    <!-- about section ends -->
-
+    <!-- contact section ends -->
 
 
 
@@ -115,22 +159,22 @@
         <div class="box-container">
 
             <div class="box">
-                <h3> <i class="fas fa-lightbulb"></i> educa </h3>
+                <h3> <i class="fas fa-lightbulb"></i> NasWeb </h3>
                 <p>NasWeb akan mmeberikan Edukasi kepada kalian semua tentang ilmu. Anjay 😎👊</p>
                 <div class="share">
                     <a href="https://m.facebook.com/ignasius.sigit.1" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
                     <a href="https://www.instagram.com/ignasiussigit/" class="fab fa-instagram"></a>
-                    <a href="#" class="fab fa-linkedin"></a>
+                    <a href="https://tiktok.com/@matrix007213" class="fab fa-linkedin"></a>
                 </div>
             </div>
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html" class="link">home</a>
-                <a href="about.html" class="link">about</a>
-                <a href="courses.html" class="link">courses</a>
-                <a href="contact.html" class="link">contact</a>
+                <a href="../home.html" class="link">home</a>
+                <a href="../public/about.html" class="link">about</a>
+                <a href="../public/blog.html" class="link">courses</a>
+                <a href="../public/contact.html" class="link">contact</a>
             </div>
 
             <div class="box">
@@ -163,12 +207,11 @@
 
 
 
-
     <!-- swiper js link  -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
     <!-- custom js file link  -->
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 </body>
 
