--- a/public/contact.html
+++ b/public/contact.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>contact</title>
 
-   <link rel="icon" href="./images/linux-hero.png">
+   <link rel="icon" href="../images/linux-hero.png">
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -15,7 +15,7 @@
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -29,10 +29,10 @@
 
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times"></div>
-         <a href="home.html">home</a>
-         <a href="about.html">about</a>
-         <a href="courses.html">courses</a>
-         <a href="contact.html">contact</a>
+         <a href="../home.html">home</a>
+         <a href="../public/about.html">about</a>
+         <a href="../public/blog.html">blog</a>
+         <a href="../public/contact.html">contact</a>
       </nav>
 
       <div class="icons">
@@ -81,7 +81,7 @@
 
    <section class="heading-link">
       <h3>contact us</h3>
-      <p> <a href="home.html">home</a> / contact </p>
+      <p> <a href="../home.html">home</a> / contact </p>
    </section>
 
    <!-- contact section starts  -->
@@ -116,7 +116,7 @@
       <div class="row">
 
          <div class="image">
-            <img src="images/contact-img.png" alt="">
+            <img src="../images/contact-img.png" alt="">
          </div>
 
          <form name="websiteku">
@@ -261,10 +261,10 @@
 
          <div class="box">
             <h3>quick links</h3>
-            <a href="home.html" class="link">home</a>
-            <a href="about.html" class="link">about</a>
-            <a href="courses.html" class="link">courses</a>
-            <a href="contact.html" class="link">contact</a>
+            <a href="../home.html" class="link">home</a>
+            <a href="../public/about.html" class="link">about</a>
+            <a href="../public/blog.html" class="link">blog</a>
+            <a href="../public/contact.html" class="link">contact</a>
          </div>
 
          <div class="box">
@@ -301,7 +301,7 @@
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="js/script.js"></script>
+   <script src="../js/script.js"></script>
 
    <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbw-4FvPL5oUDrYu0bqcuL6wc-NRIK-CCA6Vv_MQQkKvyU3QQx6B_x5xdpDS_djBEyq4/exec'
