--- a/home.html
+++ b/home.html
@@ -30,9 +30,9 @@
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times"></div>
          <a href="home.html">home</a>
-         <a href="about.html">about</a>
-         <a href="courses.html">courses</a>
-         <a href="contact.html">contact</a>
+         <a href="./public/about.html">about</a>
+         <a href="./public/blog.html">blog</a>
+         <a href="./public/contact.html">contact</a>
       </nav>
 
       <div class="icons">
@@ -134,7 +134,7 @@
 
          <div class="box">
             <img src="images/cisco1.png" alt="">
-            <h3><a href="courses.html">CisCo Packet Tracer</a></h3>
+            <h3><a href="./public/blog.html">CisCo Packet Tracer</a></h3>
             <p>5 modules</p>
          </div>
 
@@ -292,9 +292,9 @@
          <div class="box">
             <h3>quick links</h3>
             <a href="home.html" class="link">home</a>
-            <a href="about.html" class="link">about</a>
-            <a href="courses.html" class="link">courses</a>
-            <a href="contact.html" class="link">contact</a>
+            <a href="./public/about.html" class="link">about</a>
+            <a href="./public/blog.html" class="link">blog</a>
+            <a href="./public/contact.html" class="link">contact</a>
          </div>
 
          <div class="box">
@@ -333,7 +333,7 @@
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="js/script.js"></script>
+   <script src="./js/script.js"></script>
 
 </body>
 
