--- a/public/blog.html
+++ b/public/blog.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>courses</title>
 
-   <link rel="icon" href="./images/linux-hero.png">
+   <link rel="icon" href="../images/linux-hero.png">
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -15,7 +15,7 @@
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -29,10 +29,10 @@
 
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times"></div>
-         <a href="home.html">home</a>
-         <a href="about.html">about</a>
-         <a href="courses.html">courses</a>
-         <a href="contact.html">contact</a>
+         <a href="../home.html">home</a>
+         <a href="../public/about.html">about</a>
+         <a href="../public/blog.html">blog</a>
+         <a href="../public/contact.html">contact</a>
       </nav>
 
       <div class="icons">
@@ -81,7 +81,7 @@
 
    <section class="heading-link">
       <h3>our courses</h3>
-      <p> <a href="home.html">home</a> / courses </p>
+      <p> <a href="../home.html">home</a> / courses </p>
    </section>
 
    <section class="courses">
@@ -92,7 +92,7 @@
 
          <div class="box">
             <div class="image">
-               <img src="images/course-2-1.jpg" alt="">
+               <img src="../images/course-2-1.jpg" alt="">
                <h3>development</h3>
             </div>
             <div class="content">
@@ -100,7 +100,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -108,16 +108,16 @@
 
          <div class="box">
             <div class="image">
-               <img src="images/cisco_banner.jpg" alt="">
+               <img src="../images/cisco_banner.jpg" alt="">
                <h3>CisCo</h3>
             </div>
             <div class="content">
                <h3>choose what's best for you!</h3>
                <p>Packet Tracer adalah simulator alat-alat jaringan Cisco yang sering digunakan sebagai media
                   pembelajaran dan pelatihan, dan juga dalam bidang penelitian simulasi jaringan komputer!</p>
-               <a href="cisco.html" class="btn">read more</a>
+               <a href="../public/cisco.html" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -125,7 +125,7 @@
 
          <div class="box">
             <div class="image">
-               <img src="images/cyber3.png" alt="">
+               <img src="../images/cyber3.png" alt="">
                <h3>Cyber Scurity</h3>
             </div>
             <div class="content">
@@ -133,7 +133,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -141,7 +141,7 @@
 
          <div class="box">
             <div class="image">
-               <img src="images/linux2.png" style="border: 2px solid lightgreen;" alt="">
+               <img src="../images/linux2.png" style="border: 2px solid lightgreen;" alt="">
                <h3>Linux</h3>
             </div>
             <div class="content">
@@ -149,7 +149,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -157,7 +157,7 @@
 
          <div class="box">
             <div class="image">
-               <img src="images/course-2-5.jpg" alt="">
+               <img src="../images/course-2-5.jpg" alt="">
                <h3>science</h3>
             </div>
             <div class="content">
@@ -165,7 +165,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -173,7 +173,7 @@
 
          <div class="box">
             <div class="image">
-               <img src="images/course-2-6.jpg" alt="">
+               <img src="../images/course-2-6.jpg" alt="">
                <h3>business</h3>
             </div>
             <div class="content">
@@ -181,7 +181,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -189,7 +189,7 @@
 
          <div class="box hide">
             <div class="image">
-               <img src="images/course-2-7.jpg" alt="">
+               <img src="../images/course-2-7.jpg" alt="">
                <h3>teaching</h3>
             </div>
             <div class="content">
@@ -197,7 +197,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -205,7 +205,7 @@
 
          <div class="box hide">
             <div class="image">
-               <img src="images/course-2-8.jpg" alt="">
+               <img src="../images/course-2-8.jpg" alt="">
                <h3>designing</h3>
             </div>
             <div class="content">
@@ -213,7 +213,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -221,7 +221,7 @@
 
          <div class="box hide">
             <div class="image">
-               <img src="images/course-2-9.jpg" alt="">
+               <img src="../images/course-2-9.jpg" alt="">
                <h3>dancing</h3>
             </div>
             <div class="content">
@@ -229,7 +229,7 @@
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                <a href="#" class="btn">read more</a>
                <div class="icons">
-                  <span> <i class="fas fa-book"></i> 12 modules </span>
+                  <span> <i class="fas fa-user"></i> Ignasius </span>
                   <span> <i class="fas fa-clock"></i> 6 hours </span>
                </div>
             </div>
@@ -272,10 +272,10 @@
 
          <div class="box">
             <h3>quick links</h3>
-            <a href="home.html" class="link">home</a>
-            <a href="about.html" class="link">about</a>
-            <a href="courses.html" class="link">courses</a>
-            <a href="contact.html" class="link">contact</a>
+            <a href="../home.html" class="link">home</a>
+            <a href="../public/about.html" class="link">about</a>
+            <a href="../public/blog.html" class="link">blog</a>
+            <a href="../public/contact.html" class="link">contact</a>
          </div>
 
          <div class="box">
@@ -313,7 +313,7 @@
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="js/script.js"></script>
+   <script src="../js/script.js"></script>
 
 </body>
 
