menambah file vlan

--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
 
          <div class="swiper-wrapper">
 
-            <section class="swiper-slide slide" style="background: url(images/home-slide-1.jpg) no-repeat;">
+            <section class="swiper-slide slide" style="background: url(images/aku3.jpg) no-repeat;">
                <div class="content">
                   <h3>kursus terbaik yang akan Anda temukan di sini!</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
@@ -96,7 +96,7 @@
                </div>
             </section>
 
-            <section class="swiper-slide slide" style="background: url(images/home-slide-2.jpg) no-repeat;">
+            <section class="swiper-slide slide" style="background: url(images/aku2.jpg) no-repeat;">
                <div class="content">
                   <h3>the best courses you will find find here!</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
@@ -105,7 +105,7 @@
                </div>
             </section>
 
-            <section class="swiper-slide slide" style="background: url(images/home-slide-3.jpg) no-repeat;">
+            <section class="swiper-slide slide" style="background: url(images/aku1.jpg) no-repeat;">
                <div class="content">
                   <h3>the best courses you will find find here!</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
