--- a/public/3router.html
+++ b/public/3router.html
@@ -154,11 +154,12 @@
 
             <h1 class="heading"> setting IP <br> ROUTER 0 </h1>
 
-            <div class="image">
+            <div class="image" style="margin-bottom: 15px;">
                 <img src="../images/konfigurasi1.png" style="width: 50%;" alt="">
                 <small><i><b>Gambar 2.0</b></i></small>
             </div>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -203,7 +204,8 @@
                 <img src="../images/konfigurasi2.png" style="width: 50%;" alt="">
                 <small><i><b>Gambar 3.0</b></i></small>
             </div>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -242,7 +244,8 @@
             </p>
 
             <h1 class="heading"> setting IP <br> ROUTER 2 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -277,7 +280,8 @@
             <br>
 
             <h1 class="heading"> setting DHCP <br> ROUTER 0 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -295,7 +299,8 @@
             </p>
 
             <h1 class="heading"> setting DHCP <br> ROUTER 1 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router# <br>
                 Router#conf t <br>
@@ -315,7 +320,8 @@
             </p>
 
             <h1 class="heading"> setting DHCP <br> ROUTER 2 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -333,7 +339,7 @@
                 %DHCPD-4-PING_CONFLICT: DHCP address conflict: server pinged 192.168.7.1.
             </p>
 
-            <div class="image">
+            <div class="image" style="margin-top: 10px;">
                 <img src="../images/DHCP1.png" style="width: 50%;" alt="">
                 <small><i><b>Gambar 4.0</b></i></small>
             </div>
@@ -348,7 +354,8 @@
                 ikuti cara di bawah ini :
             </p>
             <h1 class="heading"> setting IP route <br> ROUTER 0 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -361,7 +368,8 @@
             </p>
 
             <h1 class="heading"> setting IP route <br> ROUTER 1 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -373,7 +381,8 @@
             </p>
 
             <h1 class="heading"> setting IP route <br> ROUTER 2 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -405,6 +414,9 @@
                     </tr>
                 </table>
             </div>
+            <p> <a href="../public/cisco.html"> <button type="button"
+                        style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;">Back</button></a>
+            </p>
         </div>
 
     </section>
