--- a/public/cisco.html
+++ b/public/cisco.html
@@ -126,10 +126,11 @@
             </div>
             <div class="icons">
                 <div class="gambar">
-                    <img src="../images/topologi5.png" alt="" style="width: 200px; height: 180px;">
+                    <img src="../images/vlan1.png" alt="" style="width: 200px; height: 180px;">
                 </div>
                 <h3>VLAN </h3>
-                <a href="../public/3router."><button type="button"
+                <h3>1 SWITCH</h3>
+                <a href="../public/vlan1.html"><button type="button"
                         style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
             <div class="icons">
