--- a/public/about.html
+++ b/public/about.html
@@ -89,7 +89,7 @@
    <section class="about">
 
       <div class="image">
-         <img src="../images/about-img.jpg" alt="">
+         <img src="../images/aku2.jpg" alt="">
       </div>
 
       <div class="content">
