menambahkan warna pada text

--- a/public/1router.html
+++ b/public/1router.html
@@ -115,7 +115,8 @@
                     <b>3.)</b> disini saya menggunakan IP claas("C") yaitu <i>192.168.2.1</i> itu sebagai
                     defaultgateaway
                 </p>
-                <p style="margin-top: 5px; font-family: Georgia, 'Times New Roman', Times, serif;">
+                <p
+                    style="margin-top: 5px; font-family: Georgia, 'Times New Roman', Times, serif; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                     Router> <br>
                     Router><span style="background-color: yellowgreen; color: white;">enable</span> <br>
                     Router#<span style="background-color: teal; color: white;">conf t</span> <br>
@@ -136,7 +137,8 @@
                     kita butuhkan adalah IP DHCP ) <br>
                     <b>5.)</b> Setting IP DHCP :
                 </p>
-                <p style="font-family: Georgia, 'Times New Roman', Times, serif;">
+                <p
+                    style="font-family: Georgia, 'Times New Roman', Times, serif;background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                     Router>enable <br>
                     Router#conf t <br>
                     Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -158,6 +160,9 @@
                         <img src="../images/ping.png" style="width: 200px;" alt="">
                     </p>
                 </div>
+                <p> <a href="../public/cisco.html"> <button type="button"
+                            style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;">Back</button></a>
+                </p>
             </div>
         </div>
     </section>
