--- a/public/2router.html
+++ b/public/2router.html
@@ -137,7 +137,8 @@
                 <i>MENGKONFIGURASI</i> antar Router, Pencencet Router 0 dan ikuti langkah berikut : <br>
             </p>
             <h1 class="heading"> setting IP <br> ROUTER 0 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -185,7 +186,8 @@
                 nya yaitu "Router1", untuk settinggan nya sama ya yang berbeda hanya no IP nya ikuti Langkah berikut :
             </p>
             <h1 class="heading"> setting IP <br> ROUTER 1 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -240,7 +242,8 @@
                 di ROUTER 0 kita akan setting DHCP :
             </p>
             <h1 class="heading"> setting DHCP <br> ROUTER 0 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -257,7 +260,8 @@
                 Router(config)#
             </p>
             <h1 class="heading"> setting DHCP <br> ROUTER 1 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -281,7 +285,8 @@
                 ikuti cara di bawah ini :
             </p>
             <h1 class="heading"> setting IP route <br> ROUTER 0 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -291,7 +296,8 @@
                 Router(config)#
             </p>
             <h1 class="heading"> setting IP route <br> ROUTER 1 </h1>
-            <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;">
+            <p
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -312,6 +318,9 @@
                 <img src="../images/pig 2.png" style="width: 35%; margin-top: 10px;" alt="">
                 <small><i><b>Gambar 5.0</b></i></small>
             </div>
+            <p> <a href="../public/cisco.html"> <button type="button"
+                        style="padding:10px; background-color: #0eb582; color: white; border-radius: 5px;">Back</button></a>
+            </p>
         </div>
 
     </section>
